We can have many many workers on fram2/3

--- a/conf/hive_config.json
+++ b/conf/hive_config.json
@@ -1,5 +1,8 @@
 {
     "Meadow" : {    # configure Meadow-specific options here:
+        "LSF" : {
+            "TotalRunningWorkersMax"    : 3000,
+	  },
         "LOCAL" : {
             "TotalRunningWorkersMax"   : 4,
 	  }
