Updated personal ehive configuration

--- a/conf/hive_config.json
+++ b/conf/hive_config.json
@@ -1,13 +1,11 @@
 {
     "Meadow" : {
+        "CleanupTempDirectoryKilledWorkers" : 1,
         "LSF" : {
             "TotalRunningWorkersMax"    : 10000
         },
         "LOCAL" : {
             "TotalRunningWorkersMax"   : 4
         }
-    },
-    "Graph" : {
-	  "DuplicateTables"       : 1
     }
 }
