On the EBI farm use /scratch instead of /tmp

--- a/conf/hive_config.json
+++ b/conf/hive_config.json
@@ -4,6 +4,11 @@
         "LOCAL" : {
             "TotalRunningWorkersMax"   : 4
         },
+        "LSF" : {
+            "EBI" : {
+                "BaseTempDirectory" : "/scratch"
+            }
+        },
         "DockerSwarm" : {
             "ImageName"     : "ensemblorg/ensembl-hive-docker-swarm",
             "RunWorkerPath" : "/repo/ensembl-hive/scripts/",
